--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>UI Counter</title>
-    <link rel="stylesheet" href="src/css/index.css" />
+    <title>Test Tutorial</title>
+    <link rel="stylesheet" href="/src/css/index.css" />
   </head>
   <body>
     <div id="app">
-      <div class="container">
-        <h1 class="title">counter</h1>
-        <span id="value">0</span>
-        <div class="button-container">
-          <button class="btn decrease-btn">-</button>
-          <button class="btn reset-btn">Reset</button>
-          <button class="btn increase-btn">+</button>
-        </div>
-      </div>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="/html/counter.html">Counter</a></li>
+            <li><a href="/html/calculator.html">Calculator</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
-    <script type="module" src="src/js/index.js"></script>
   </body>
 </html>
