--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
   <body>
     <div id="app">
       <header>
-        <nav>
+        <nav class="nav">
           <ul>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="/html/counter.html">Counter</a></li>
             <li><a href="/html/calculator.html">Calculator</a></li>
           </ul>
         </nav>
       </header>
+      <div class="container">
+        <form>
+          <fieldset>
+            <label for="username">
+              이름
+              <input type="text" name="username" />
+            </label>
+            <label for="password">
+              비밀번호
+              <input type="password" name="password" />
+            </label>
+          </fieldset>
+          <button type="submit">전송</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
